test badua and failsafe